# barSim7707

./: .gitignore  Makefile  README.md  barsim.nix  default.nix  elm-package.json
client/: Constants.elm  Main.elm  Main.elm.old  Makefile  Ports.elm  State.elm  Types.elm  Utils.elm  View.elm  elm-package.json  index.html
client/Cell/: State.elm  Types.elm  View.elm
client/Component/: Cell.elm  Grid.elm  Number.elm  StatusBar.elm  Timer.elm
client/Grid/: State.elm  Types.elm  Utils.elm  View.elm
client/Stats/: State.elm  Types.elm  View.elm
client/Status/: State.elm  Types.elm  View.elm
client/src/: App.elm  Constants.elm  State.elm  Types.elm  View.elm
client/src/GameBoard/: State.elm  Types.elm  View.elm
client/src/UserPage/: State.elm  Types.elm  View.elm
server/: README.md  server.cabal
server/app/: Main.hs
server/src/: Constants.hs  Main.hs  RNG.hs  Server.hs  State.hs  Types.hs
